# GameProject

./: .gitignore  .gitmodules  CMakeLists.txt  EnsureVulkan.sh  main.cpp
CommonSystems/: CMakeLists.txt
CommonSystems/Demos/: CMakeLists.txt
CommonSystems/Demos/DescriptorTest/: DescriptorTest.cpp
CommonSystems/Demos/GLFWSystemTest/: GLFWSystemTest.cpp
CommonSystems/Demos/RaytraceTest/: RaytraceTest.cpp
CommonSystems/Demos/StorageBufferTest/: StorageBufferTest.cpp
CommonSystems/Demos/TetrahedronTest/: TetrahedronTest.cpp
CommonSystems/Demos/VulkanRaytraceTest/: VulkanRaytraceTest.cpp
CommonSystems/Include/: cmnBasicShapes.h  cmnCommon.h  cmnGLFWSystem.h  cmnVertexTypes.h
CommonSystems/Source/: cmnGLFWSystem.cpp  cmnVertexTypes.cpp
Game/: CMakeLists.txt
Game/Include/: BasicShapes.h  FileIO.h  PipelineStateSetters.h  main.h
Game/Source/: PipelineStateSetters.cpp  main.cpp
Game/VkSystem/: VkSystem.cpp  VkSystem.h  vksCmdClasses.h  vksCommandClasses.cpp  vksImage.cpp  vksMemory.cpp  vksMemory.h  vksPipeline.cpp  vksPipeline.h  vksTypes.cpp  vksTypes.h  vksVkData.cpp  vksVkData.h
Ideation/: AI General Idea.md  Consideration Matrix System.md  What Is Needed.md
Ideation/.obsidian/: workspace
VkSystem/: CMakeLists.txt
VkSystem/Include/: VkSystem.h  vksCmdClasses.h  vksDescriptors.h  vksFence.h  vksGLFWCallbackHandler.h  vksImage.h  vksMemory.h  vksPipeline.h  vksRaytracer.h  vksShaderStore.h  vksTimelineSemaphore.h  vksTypes.h  vksVkData.h
VkSystem/Source/: vksCommandClasses.cpp  vksDescriptors.cpp  vksFence.cpp  vksGLFWCallbackHandler.cpp  vksMemory.cpp  vksPipeline.cpp  vksRaytracer.cpp  vksShaderStore.cpp  vksTimelineSemaphore.cpp  vksTypes.cpp  vksVkData.cpp
VulkanIntermidiate/: CMakeLists.txt
VulkanIntermidiate/Include/: API.hpp  Storage.hpp  VkLayer.hpp
VulkanIntermidiate/Source/: VkBootstrap.cpp  VkLayerStaticFunctions.cpp  base.cpp
VulkanLayer/: CMakeLists.txt
VulkanLayer/Include/: VkLayer.hpp
VulkanLayer/Source/: VkLayerStaticFunctions.cpp
flecs-git/: PKGBUILD
