file(GLOB StorageBufferTestSRC "StorageBufferTest/*.cpp")
file(GLOB StorageBufferTestINCL "StorageBufferTest/*.h")
add_executable(StorageBufferTest ${StorageBufferTestSRC} ${StorageBufferTestINCL} )
target_link_libraries(StorageBufferTest PRIVATE VkSystem)
if(MSVC)
    target_compile_options(StorageBufferTest PRIVATE /MP)
endif()

file(GLOB TetrahedronTestSRC "TetrahedronTest/*.cpp")
file(GLOB TetrahedronTestINCL "TetrahedronTest/*.h")
add_executable(TetrahedronTest ${TetrahedronTestSRC} ${TetrahedronTestINCL} )
target_link_libraries(TetrahedronTest PRIVATE common)
if(MSVC)
    target_compile_options(TetrahedronTest PRIVATE /MP)
endif()

file(GLOB GLFWSystemTestSRC "GLFWSystemTest/*.cpp")
file(GLOB GLFWSystemTestINCL "GLFWSystemTest/*.h")
add_executable(GLFWSystemTest ${GLFWSystemTestSRC} ${GLFWSystemTestINCL} )
target_link_libraries(GLFWSystemTest PRIVATE common)
if(MSVC)
    target_compile_options(GLFWSystemTest PRIVATE /MP)
endif()

file(GLOB DescriptorTestSRC "DescriptorTest/*.cpp")
file(GLOB DescriptorTestINCL "DescriptorTest/*.h")
add_executable(DescriptorTest ${DescriptorTestSRC} ${DescriptorTestINCL} )
target_link_libraries(DescriptorTest PRIVATE common)
if(MSVC)
    target_compile_options(DescriptorTest PRIVATE /MP)
endif()